@@ -9,7 +9,6 @@ import ch.njol.skript.lang.Effect;
 import ch.njol.skript.lang.Expression;
 import ch.njol.skript.lang.SkriptParser.ParseResult;
 import ch.njol.skript.lang.TriggerItem;
-import ch.njol.skript.paperlib.PaperLib;
 import ch.njol.skript.variables.Variables;
 import ch.njol.util.Kleenean;
 import com.shanebeestudios.skbee.SkBee;
@@ -23,21 +22,21 @@ import org.jetbrains.annotations.Nullable;
 
 @Name("Chunk - Load/Unload")
 @Description({"Load or unload a chunk. When loading you have an option to add a ticket.",
-        "This will prevent the chunk from unloading until you explicitly unload it, or the server stops.",
-        "The two numbers represent a chunk's X/Y coords, NOT a location. A chunk's X/Y coords are basically",
-        "a location divided by 16. Ex: Chunk 1/1 would be at X=16, Z=16.",
-        "Async loading (requires PaperMC) will prevent freezing the main thread, your code will continue once",
-        "the chunk has finished loading/generating.",
-        "NOTE: If no ticket is added, and the chunk has no players to keep it active, it will immediately unload.",
-        "NOTE: When adding a ticket, a bunch of chunks will load in a radius around said chunk."})
+    "This will prevent the chunk from unloading until you explicitly unload it, or the server stops.",
+    "The two numbers represent a chunk's X/Y coords, NOT a location. A chunk's X/Y coords are basically",
+    "a location divided by 16. Ex: Chunk 1/1 would be at X=16, Z=16.",
+    "Async loading (requires PaperMC) will prevent freezing the main thread, your code will continue once",
+    "the chunk has finished loading/generating.",
+    "NOTE: If no ticket is added, and the chunk has no players to keep it active, it will immediately unload.",
+    "NOTE: When adding a ticket, a bunch of chunks will load in a radius around said chunk."})
 @Examples({"load chunk at 1,1 in world \"world\"",
-        "load chunk at location(1,1,1, world \"world\")",
-        "load chunk at 150,150 in world \"world\"",
-        "load chunk at 150,150 in world \"world\" with ticket",
-        "async load chunk at {_loc}",
-        "async load chunk at 100,100 in world \"world\"",
-        "async load chunk at 1,1 in world of player with ticket",
-        "unload chunk at 1,1 in world \"world\""})
+    "load chunk at location(1,1,1, world \"world\")",
+    "load chunk at 150,150 in world \"world\"",
+    "load chunk at 150,150 in world \"world\" with ticket",
+    "async load chunk at {_loc}",
+    "async load chunk at 100,100 in world \"world\"",
+    "async load chunk at 1,1 in world of player with ticket",
+    "unload chunk at 1,1 in world \"world\""})
 @Since("1.17.0, 2.11.0 (async)")
 public class EffLoadChunk extends Effect {
 
@@ -45,9 +44,9 @@ public class EffLoadChunk extends Effect {
 
     static {
         Skript.registerEffect(EffLoadChunk.class,
-                "([:async ]load|:unload) chunk at %number%,[ ]%number% (in|of) [world] %world% [ticket:with ticket]",
-                "([:async ]load|:unload) chunk at %location% [ticket:with ticket]",
-                "unload %chunks%");
+            "([:async ]load|:unload) chunk at %number%,[ ]%number% (in|of) [world] %world% [ticket:with ticket]",
+            "([:async ]load|:unload) chunk at %location% [ticket:with ticket]",
+            "unload %chunks%");
     }
 
     private int pattern;
@@ -60,7 +59,7 @@ public class EffLoadChunk extends Effect {
     private Expression<Location> location;
     private Expression<Chunk> chunks;
 
-    @SuppressWarnings({"NullableProblems", "unchecked"})
+    @SuppressWarnings("unchecked")
     @Override
     public boolean init(Expression<?>[] exprs, int pattern, Kleenean kleenean, ParseResult parseResult) {
         this.pattern = pattern;
@@ -80,12 +79,10 @@ public class EffLoadChunk extends Effect {
         return true;
     }
 
-    @SuppressWarnings("NullableProblems")
     @Override
     protected void execute(Event event) {
     }
 
-    @SuppressWarnings("NullableProblems")
     @Override
     protected @Nullable TriggerItem walk(Event event) {
         TriggerItem next = getNext();
@@ -94,7 +91,7 @@ public class EffLoadChunk extends Effect {
             int x = 0;
             int z = 0;
 
-            World world = Bukkit.getWorlds().get(0);
+            World world = Bukkit.getWorlds().getFirst();
 
             if (this.x != null) {
                 Number xSingle = this.x.getSingle(event);
@@ -126,7 +123,7 @@ public class EffLoadChunk extends Effect {
                         Object localVars = Variables.removeLocals(event);
 
                         // If running paper, get chunk async, otherwise will run sync
-                        PaperLib.getChunkAtAsync(world, x, z).thenAccept(chunk -> {
+                        world.getChunkAtAsync(x, z).thenAccept(chunk -> {
                             if (this.ticket) chunk.addPluginChunkTicket(PLUGIN);
 
                             // re-set local variables
